@@ -4,7 +4,7 @@ import java.io.File
 
 object Module {
   def apply(dirOrFile: String)(implicit _project: Project): Module = {
-    _project.findOrCreateModule(dirOrFile)
+    _project.findOrCreateModule(dirOrFile, copyProperties = false)
     new Module(dirOrFile, _project)
   }
   @deprecated(message = "Use Modules() instead.", since = "0.3.2.9000")
@@ -12,7 +12,7 @@ object Module {
     dirOrFiles.map { dirOrFile => Module(dirOrFile) }
 }
 
-class Module private[sbuild] (dirOrFile: String, project: Project) {
+class Module private (dirOrFile: String, project: Project) {
   def name = dirOrFile
   def apply(targetName: String): TargetRef = targetRef(targetName)
   def targetRef(targetName: String): TargetRef = TargetRef(dirOrFile + "::" + targetName)(project)
